Fix Global Exception and added Log